<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="32dp">


    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton"
        android:layout_width="218dp"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="#4B09F3"
        android:text="@string/registration"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:ignore="HardcodedText,MissingConstraints"
        tools:layout_editor_absoluteX="96dp" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/uzhe"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/materialButton"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="115dp" />

    <TextView
        android:id="@+id/textView4"
        style="@style/TextAppearance.MaterialComponents.Headline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/luchshi"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"

        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="479dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/sozdaniy"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:layout_editor_absoluteX="92dp"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>